--- a/css/style.less
+++ b/css/style.less
@@ -17,32 +17,12 @@
 			box-shadow: 0px 0px 4px 1px #fff;}
 	&:active {outline: none !important;}
 };
-
-.LOGIN {
-	top: 20%;
+a {
+	color: @bleu;
+	&:focus, &:hover {
+		color: #337ab7;
+	}
 }
-
-.wrapper-login {
-	width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 999999;
-    background-color: rgba(0,0,0,0.9);
-}
-
-span.filter-option {
-	text-align: center !important;
-}
-
-.input-group-btn select {
-	border-color: #ccc;
-	margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-}
-
-
 body, html {
 	margin: 0;
 	padding: 0;
@@ -51,25 +31,28 @@ body, html {
 	text-align: center;
 	background-image: url(../img/background-2.png);
 }
-
 #wrapper {
 	min-height:100%;
 	position:relative;
 }
-
+.main-col {
+	max-width: 1600px;
+	margin: auto;
+}
+.ligne {
+	max-width: 1600px;
+	padding: 15px 0 55px 0;
+}
 select {
 	border-radius: 4px;
 }
-
 .jumbotron  {
 	color:black;
 }
-
 button > .glyphicon, a > .glyphicon {
 	top: 3px;
 	font-size: 25px;
 }
-
 .btn {
 	background-color: rgb(34,34,34);
 	color: @bleu;
@@ -83,99 +66,36 @@ button > .glyphicon, a > .glyphicon {
 		color : black !important;
 	}
 }
-
-.modal {
-	color: black;
-}
-
-#modal-error-ws {
-	color: red;
-	top: 0 !important;
-}
-
-#extensions .modal-dialog {
-	top:150px;
-}
-
-.modal-on-top {
-	color: black;
-	top: -30px !important;
-	width: 300px;
-	margin-left: -150px;
-	left:50% !important;
-	bottom: auto !important;
-	opacity: 0.8 !important;
-}
-
-.modal {
-	z-index: 9999999999;
-}
-
-.modal-content-custom {
-	min-height: 55px !important;
-}
-
-.fa-stack-1x, .fa-stack-2x {
-	bottom: 5px !important;
-}
-
-.list-group-item:first-child {
-	border-top-right-radius: 0px;
-	border-top-left-radius: 0px;
-}
-.list-group-item:last-child {
-	border-bottom-right-radius: 0px;
-	border-bottom-left-radius: 0px;
-}
-.LIB .list-group {
-	margin-bottom: 0px;
-}
-#form_infini_scroll {
-	border-bottom-right-radius: 4px !important;
-	border-bottom-left-radius: 4px !important;
-	padding: 20px 10px;
-}
-
 [class*="col-"], header {
 	border-radius: 12px;
 }
-
+.fa-stack-1x, .fa-stack-2x {
+	bottom: 5px !important;
+}
 .error {
 	color: red;
 }
-#music_preview .ui-state-default,
-#music_preview .ui-widget-content .ui-state-default,
-#music_preview .ui-widget-header .ui-state-default {
-  border: 1px solid #d3d3d3;
-  border-radius: 4px;
-  background: #e6e6e6;
-  font-weight: normal;
-  color: #555555;
-}
-#music_preview .ui-state-hover,
-#music_preview .ui-widget-content .ui-state-hover,
-#music_preview .ui-widget-header .ui-state-hover,
-#music_preview .ui-state-focus,
-#music_preview .ui-widget-content .ui-state-focus,
-#music_preview .ui-widget-header .ui-state-focus {
-	border: 1px solid #999999;
-	background: #dadada;
-	font-weight: normal;
-	color: #212121;
+
+/***************** LOGIN STUFF *****************/
+
+.LOGIN {
+	position: fixed;
+	top: 20%;
 }
 
-#music_preview .ui-state-active,
-#music_preview .ui-widget-content .ui-state-active,
-#music_preview .ui-widget-header .ui-state-active {
-	border: 1px solid #aaaaaa;
-	background: #ffffff;
-	font-weight: normal;
-	color: #212121;
+.wrapper-login {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 999999;
+	background-color: rgba(0,0,0,0.9);
 }
+
+/***************** LOGIN STUFF *****************/
+
+
 /***************** NAVBAR STUFF ****************/
-
 .navbar {
-	height: 50px;
 	margin-bottom: 0px !important;
 	box-shadow: 0px 0px 12px 2px #000;
 	border-radius: 0px;
@@ -193,16 +113,35 @@ button > .glyphicon, a > .glyphicon {
 	.navbar-nav>li>a>button{
 		.beauti-btn;
 	}
-	.navbar-nav>li>a#btn-navbar{
+	.navbar-nav>li>a.btn-navbar{
 		padding-left: 12px;
 		padding-top: 8px;
+		padding-bottom: 0;
 	}
 }
 
-.ligne {
-	padding-top: 15px;
-	padding-bottom: 55px;
+.navbar-brand {
+	color: #fff !important;
+	background-color: #080808 !important;
 }
+
+.navbar-listeners li a.btn-navbar {
+	text-align: right;
+
+	.btn-navbar-listeners {
+		cursor: default;
+		border-radius: 50px;
+	    width: 36px;
+	    overflow: hidden;
+	    letter-spacing: 20px;
+	    transition: all .8s;
+	    &:hover {
+	    	width:100%;
+	    	letter-spacing: 0px;
+	    };
+	}
+}
+
 
 /********************** REMOTE STUFF ***********/
 .remote {
@@ -216,43 +155,26 @@ button > .glyphicon, a > .glyphicon {
 }
 
 .header-remote img {
-	max-height: 90px;
 	width: auto;
+	max-height: 90px;
+	padding: 0 0 0 15px;
 }
 
-.title_playing {
-	margin-top: 10px;
-}
-.title{
-	height: 96px;
-}
-
-.marquee {
-	margin-top: 20px;
+.title {
 	white-space: nowrap;
-	overflow: hidden;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: @bleu;
+	&:focus, &:hover {
+		color: #337ab7;
+	}
+}
+
+.now-playing {
 	font-size: 2em;
-}
-
-.marquee a {
-	display: inline-block;
-	padding-left: 100%;
-	text-indent: 0;
-	transform: translateZ(0);
-	animation: marquee 15s linear infinite;
-	&:hover {
-		animation-play-state: paused
-	};
-}
-
-/* Make it move */
-@keyframes marquee {
-	from {
-		transform: translateX(0%);
-	}
-	to {
-		transform: translateX(-100%);
-	}
+	margin-top: 30px;
+    margin-bottom: 20px;
+    display: block;
 }
 
 .empty {
@@ -292,23 +214,39 @@ button > .glyphicon, a > .glyphicon {
 }
 
 .table>tbody>tr.playlist-item {
-	.icon-trash {
-		width: 5%;
+	@media (min-width: 1350px) {
+		.icon-trash {
+			width: 5%;
+		}
+		.name {
+			width: 65%;
+		}
+		.duration {
+			width: 10%;
+		}
+		.ordering {
+			width: 5%;
+		}
+		.ordering.medium {
+			width: 15%;
+		}
+		.ordering.max {
+			width: 20%;
+		}
 	}
-	.name {
-		width: 65%;
-	}
-	.duration {
-		width: 10%;
-	}
-	.ordering {
-		width: 5%;
-	}
-	.ordering.medium {
-		width: 15%;
-	}
-	.ordering.max {
-		width: 20%;
+	@media (max-width: 1350px) {
+		.icon-trash {
+			width: 1%;
+		}
+		.name {
+			width: 35%;
+		}
+		.duration {
+			width: 1%;
+		}
+		.ordering.max {
+			width: 20%;
+		}
 	}
 }
 
@@ -345,16 +283,16 @@ button > .glyphicon, a > .glyphicon {
 
 .overlay-playlist {
 	width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(160,160,160,0.8);
-    display: table;
-    overflow: hidden;
-    z-index: 10;
+	height: 100%;
+	position: absolute;
+	background-color: rgba(160,160,160,0.8);
+	display: table;
+	overflow: hidden;
+	z-index: 10;
 }
 .loader{
-    display: table-cell !important;
-    vertical-align: middle;
+	display: table-cell !important;
+	vertical-align: middle;
 }
 
 .ordering-to-top, .ordering-move-up, .ordering-move-down, .ordering-to-bot {
@@ -364,12 +302,14 @@ button > .glyphicon, a > .glyphicon {
 .wrapper-progress-bar{
 	height: 20px;
 	margin-bottom: 20px;
-}
-
-.wrapper-progress-bar > .progress {
-	position: absolute;
-	left: 15px;
-	right: 15px;
+	>.progress {
+		position: absolute;
+		left: 15px;
+		right: 15px;
+		>.progress-bar {
+			border-radius: 4px;
+		}
+	}
 }
 
 #time-left-progress-bar-wrapper {
@@ -381,18 +321,20 @@ button > .glyphicon, a > .glyphicon {
 
 .progress{
 	margin-bottom: 0;
-	.progress-bar{
-		transition:initial;
-	}
+}
+
+#wrapper-btn-open-player {
+	display: table-cell;
+	vertical-align: middle;
+
+	background-color: rgba(50,50,50,0.4);
+	border-radius: 50px;
+	border: rgba(100,100,100,0.8) 1px solid;
 }
 
 #btn-open-player {
-	display: table-cell;
-    vertical-align: middle;
-
-    background-color: rgba(50,50,50,0.4);
-    border-radius: 50px;
-    border: rgba(100,100,100,0.8) 1px solid;
+	cursor: pointer;
+	border-radius: 86px;
 }
 
 .btn-control {
@@ -415,20 +357,77 @@ button > .glyphicon, a > .glyphicon {
 	position: relative;
 	top: 1px;
 }
+
+#music_preview .ui-state-default,
+#music_preview .ui-widget-content .ui-state-default,
+#music_preview .ui-widget-header .ui-state-default {
+  border: 1px solid #d3d3d3;
+  border-radius: 4px;
+  background: #e6e6e6;
+  font-weight: normal;
+  color: #555555;
+}
+#music_preview .ui-state-hover,
+#music_preview .ui-widget-content .ui-state-hover,
+#music_preview .ui-widget-header .ui-state-hover,
+#music_preview .ui-state-focus,
+#music_preview .ui-widget-content .ui-state-focus,
+#music_preview .ui-widget-header .ui-state-focus {
+	border: 1px solid #999999;
+	background: #dadada;
+	font-weight: normal;
+	color: #212121;
+}
+
+#music_preview .ui-state-active,
+#music_preview .ui-widget-content .ui-state-active,
+#music_preview .ui-widget-header .ui-state-active {
+	border: 1px solid #aaaaaa;
+	background: #ffffff;
+	font-weight: normal;
+	color: #212121;
+}
+
 /********************** REMOTE STUFF ***********/
 
 
 
 /********************** LIBRARY STUFF ***********/
 #tab_btn_playlist .badge {
-    position: relative;
-    left: 10px;
+	position: relative;
+	left: 10px;
 }
 
 .LIB {
 	min-height: 550px;
 	background: rgba(34,34,34,0.7);
 	.shadow;
+	.list-group {
+		margin-bottom: 0px;
+		color: blue;
+	}
+}
+
+.list-group-item{
+	padding: initial;
+	display: table;
+	width: 100%;
+}
+
+.list-group-item:first-child {
+	border-top-right-radius: 0px;
+	border-top-left-radius: 0px;
+}
+
+.list-group-item:last-child {
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+#form_infini_scroll {
+	border-bottom-right-radius: 4px !important;
+	border-bottom-left-radius: 4px !important;
+	padding: 20px 10px;
 }
 
 .search-form {
@@ -437,16 +436,24 @@ button > .glyphicon, a > .glyphicon {
 	}
 	.dropdown-toggle {
 		border-bottom-left-radius: 4px !important;
-    	border-top-left-radius: 4px !important;
+		border-top-left-radius: 4px !important;
 	}
+}
+
+.input-group-btn select {
+	border-color: #ccc;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+}
+
+span.filter-option {
+	text-align: center !important;
 }
 
 .input-lib {
 	padding-top: 20px;
-}
-
-.list-group {
-	color: blue;
 }
 
 .list-lib {
@@ -462,12 +469,6 @@ button > .glyphicon, a > .glyphicon {
 	font-weight: bold;
 }
 
-.list-group-item{
-	padding: initial;
-    display: table;
-    width: 100%;
-}
-
 .row-list-item {
 	margin-right: 0px !important;
 	margin-left: 0px !important;
@@ -476,41 +477,37 @@ button > .glyphicon, a > .glyphicon {
 
 .add-music-form{
 	display: table-cell;
-    float: none;
-    vertical-align: middle;
-    padding: 0;
-    button {
+	float: none;
+	vertical-align: middle;
+	padding: 0;
+	button {
 		padding: 10px 14px;
-	    border-radius: 8px;
-    }
-    button.icon-refresh {
-    	padding: 12.5px 16px !important;
-    }
-    .fa-refresh {
-    	font-size: 22px;
-    }
+		border-radius: 8px;
+	}
+	button.icon-refresh {
+		padding: 12.5px 16px !important;
+	}
+	.fa-refresh {
+		font-size: 22px;
+	}
 }
 
 .search-music-info, .library-music-info{
 	padding: 0;
-    float: none;
-    display: table-cell;
-    vertical-align: middle;
-    width: 100%;
+	float: none;
+	display: table-cell;
+	vertical-align: middle;
+	width: 100%;
 }
 
 .search-img-music, .library-img-music{
 	display: table-cell;
-    vertical-align: middle;
-    width: 25%;
-    img{
-    	border-radius: 20px;
-    	width: 120px;
-    }
-}
-
-.show-more{
-	cursor: pointer;
+	vertical-align: middle;
+	width: 25%;
+	img{
+		border-radius: 20px;
+		width: 120px;
+	}
 }
 
 [class$="-list-music"] {
@@ -524,11 +521,10 @@ button > .glyphicon, a > .glyphicon {
 .popover {
 	border-radius: 8px !important;
 	max-width: 200px;
-}
-
-.popover img {
-	float: left;
-	margin-right: 10px;
+	img {
+		float: left;
+		margin-right: 10px;
+	}
 }
 
 .popover-content {
@@ -587,6 +583,10 @@ button > .glyphicon, a > .glyphicon {
 	transition: all 200ms linear;
 	visibility: hidden;
 	display: block;
+
+	#slider {
+		margin-bottom: 15px;
+	}
 }
 
 #music_preview.modal.fade.in {
@@ -594,8 +594,9 @@ button > .glyphicon, a > .glyphicon {
 	z-index: 9999;
 }
 
-#music_preview #slider {
-	margin-bottom: 15px;
+
+#music_preview .timers_wrapper {
+	margin-top: 20px;
 }
 
 /********************** LIBRARY STUFF ***********/
@@ -647,7 +648,7 @@ button > .glyphicon, a > .glyphicon {
 #wrapper-slider-volume {
 	padding-left: 10%;
 	padding-right: 10%;
-	height: 25%;
+	height: 100%;
 	line-height:20%;
 	margin-left: -15px;
 	display: none;
@@ -656,72 +657,183 @@ button > .glyphicon, a > .glyphicon {
 	bottom: 0%;
 	z-index: 99;
 	background: linear-gradient(to bottom,
-    	rgba(0, 0, 0, 0) 0%,
-    	rgba(0, 0, 0, 0.2) 20%,
-    	rgba(0, 0, 0, 0.7) 50%,
-    	rgba(0, 0, 0, 0.9) 100%);
+		rgba(0, 0, 0, 0) 0%,
+		rgba(0, 0, 0, 0.2) 50%,
+		rgba(0, 0, 0, 0.7) 70%,
+		rgba(0, 0, 0, 0.9) 100%);
 }
-
 
 #slider-volume {
 	position: absolute;
-    width: 70%;
+	width: 70%;
 	border-width: 1px;
-    border-style: solid;
-    border-color: #333 #333 #777 #333;
-    border-radius: 25px;
+	border-style: solid;
+	border-color: #333 #333 #777 #333;
+	border-radius: 25px;
 	background-color: #8e8d8d;
-    background: url('../img/bg-slider.png') repeat top left;
-  	box-shadow: inset 0 1px 5px 0px rgba(0, 0, 0, .5),
-                 0 1px 0 0px rgba(250, 250, 250, .5);
-    height: 13px;
-	top: 44%;
+	background: url('../img/bg-slider.png') repeat top left;
+	box-shadow: inset 0 1px 5px 0px rgba(0, 0, 0, .5),
+				 0 1px 0 0px rgba(250, 250, 250, .5);
+	height: 13px;
+	bottom: 10%;
 }
+
 .ui-slider-range {
-    background: linear-gradient(to top, #ffffff 0%,#bbbbbb 100%) !important;
-    border-radius: 25px;
+	background: linear-gradient(to top, #ffffff 0%,#bbbbbb 100%) !important;
+	border-radius: 25px;
 }
 .ui-slider-handle {
 	outline: none !important;
 	border: none !important;
-    width: 25px !important;
-    height: 25px !important;
-    background: url('../img/handler-slider.png') no-repeat 50% 50% !important;
-    top: -7px !important;
-    margin-left: -12px !important;
-    &:focus {border : none !important;
-    		outline: none !important;}
-    &:active {border: none !important;
-    		outline: none !important;}
+	width: 25px !important;
+	height: 25px !important;
+	background: url('../img/handler-slider.png') no-repeat 50% 50% !important;
+	top: -7px !important;
+	margin-left: -12px !important;
+	&:focus {border : none !important;
+			outline: none !important;}
+	&:active {border: none !important;
+			outline: none !important;}
 }
 
 #icon-volume {
-    width: 30px;
-    height: 26px;
-    background: url('../img/volume-icon-sprite.png') no-repeat 0 -50px;
-    border-radius: 0px;
-	top:35%;
+	width: 30px;
+	height: 26px;
+	background: url('../img/volume-icon-sprite.png') no-repeat 0 -50px;
+	border-radius: 0px;
+	right: 80px;
+	bottom: 8px;
 }
 
 #tooltip_volume_slider {
 	display: none;
-    width: 35px;
-    height: 25px;
-    color: #fff;
-    text-align: center;
-    border-radius: 3px;
-    border: 1px solid #333;
-  	box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, .3);
-    box-sizing: border-box;
-    background: linear-gradient(to top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%);
+	width: 35px;
+	height: 25px;
+	color: #fff;
+	text-align: center;
+	border-radius: 3px;
+	border: 1px solid #333;
+	box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, .3);
+	box-sizing: border-box;
+	background: linear-gradient(to top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%);
 }
 
-a#btn-link-remote{
-	position: relative;
-	top: 100px;
-	display: inline-block;
-	box-shadow: 0px 25px 40px 0px #000000;
-	border-radius: 100px;
-}
 
 /********************** PLAYER STUFF ***********/
+
+
+/********************** MODAL STUFF ************/
+
+.modal {
+	color: black;
+	z-index: 9999999999;
+}
+
+#modal-error-ws {
+	color: red;
+	top: 0 !important;
+}
+
+#extensions .modal-dialog {
+	top:150px;
+}
+
+.modal-on-top {
+	color: black;
+	top: -30px !important;
+	width: 300px;
+	margin-left: -150px;
+	left:50% !important;
+	bottom: auto !important;
+	opacity: 0.8 !important;
+}
+
+.modal-content-custom {
+	min-height: 55px !important;
+}
+
+/********************** MODAL STUFF ************/
+
+
+/********************** MEDIA STUFF ************/
+@media (max-width: 768px){
+	.navbar-nav>li>a.btn-navbar{
+		padding: 10px 15px 5px 15px !important;
+	}
+}
+
+@media (min-width: 768px){
+	#navbar-top {
+		max-height: 50px;
+	}
+}
+
+/********************** MEDIA STUFF ************/
+
+
+/********************** SPINNER STUFF **********/
+.sk-cube-grid {
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+}
+
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  background-color: #FFF;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1); 
+  }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  } 
+}
